--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "shadow_bot",
+  "name": "tele_bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "dev": "nodemon --env-file=.env index.js",
+    "bot:dev": "nodemon --env-file=.env bot.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "express": "^4.21.2"
+    "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
