--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
