--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "axios": "1.7.9",
+    "date-fns": "4.1.0",
+    "node-telegram-bot-api": "0.66.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
