--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon --env-file=.env index.js",
-        "bot:dev": "nodemon --env-file=.env bot.js",
+        "bot:dev": "nodemon --env-file=.env ./src/bot/bot.js",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
