--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "axios": "1.7.9",
         "date-fns": "4.1.0",
         "grammy": "^1.34.0",
-        "mongoose": "^8.9.5",
-        "node-telegram-bot-api": "0.66.0"
+        "mongoose": "^8.9.5"
     },
     "devDependencies": {
         "eslint": "^9.18.0",
