--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon --env-file=.env index.js",
-        "bot:dev": "nodemon --env-file=.env ./src/bot/bot.js",
+        "server:dev": "nodemon --env-file=.env ./src/mongodb/server.js",
+        "bot:dev": "nodemon --env-file=.env index.js",
+        "dev": "concurrently \"npm run server:dev\" \"npm run bot:dev\"",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
@@ -17,8 +18,12 @@
     "description": "",
     "dependencies": {
         "axios": "1.7.9",
+        "body-parser": "^1.20.3",
+        "concurrently": "^9.1.2",
         "date-fns": "4.1.0",
+        "express": "^4.21.2",
         "grammy": "^1.34.0",
+        "jest": "^29.7.0",
         "mongoose": "^8.9.5"
     },
     "devDependencies": {
