--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "1.7.9",
         "body-parser": "^1.20.3",
         "concurrently": "^9.1.2",
+        "cors": "^2.8.5",
         "date-fns": "4.1.0",
         "express": "^4.21.2",
         "grammy": "^1.34.0",
