--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server:start": "node --env-file=.env ./src/mongodb/server.js",
-        "bot:start": "node --env-file=.env index.js",
+        "server:start": "node ./src/mongodb/server.js",
+        "bot:start": "node index.js",
         "server:dev": "nodemon --env-file=.env ./src/mongodb/server.js",
         "bot:dev": "nodemon --env-file=.env index.js",
         "dev": "concurrently \"npm run server:dev\" \"npm run bot:dev\"",
@@ -31,6 +31,7 @@
         "mongoose": "^8.9.5"
     },
     "devDependencies": {
+        "@flydotio/dockerfile": "^0.7.8",
         "eslint": "^9.18.0",
         "nodemon": "^3.1.9",
         "prettier": "^3.4.2"
