--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server:start": "node ./src/mongodb/server.js",
         "bot:start": "node index.js",
-        "server:dev": "nodemon --env-file=.env ./src/mongodb/server.js",
         "bot:dev": "nodemon --env-file=.env index.js",
-        "dev": "concurrently \"npm run server:dev\" \"npm run bot:dev\"",
-        "start": "concurrently \"npm run server:start\" \"npm run bot:start\"",
+        "dev": "npm run bot:dev",
+        "start": "npm run bot:start",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
@@ -28,7 +26,8 @@
         "express": "^4.21.2",
         "grammy": "^1.34.0",
         "jest": "^29.7.0",
-        "mongoose": "^8.9.5"
+        "mongoose": "^8.9.5",
+        "dotenv": "^16.4.7"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
