--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "axios": "1.7.9",
+        "axios": "^1.8.4",
         "body-parser": "^1.20.3",
         "concurrently": "^9.1.2",
         "cors": "^2.8.5",
         "date-fns": "4.1.0",
+        "date-fns-tz": "^3.2.0",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "grammy": "^1.34.0",
         "jest": "^29.7.0",
-        "mongoose": "^8.9.5",
-        "dotenv": "^16.4.7"
+        "mongoose": "^8.9.5"
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.7.8",
